# viewer

./: CLAUDE.md  README.md  SPEC.md  TODO.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.cargo/: config.toml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns  viewer.icns
src-tauri/src/: db.rs  file_scanner.rs  lib.rs  main.rs  metadata.rs  tag_store.rs  tests.rs  thumbnail.rs
src-tauri/src/commands/: files.rs  folders.rs  mod.rs  tags.rs
src/components/FilterPanel/: index.tsx
src/components/Gallery/: index.tsx
src/components/InfoPanel/: index.tsx
src/components/ParallaxViewer/: index.tsx
src/components/Player/: index.tsx
src/components/SearchBar/: index.tsx
src/components/Sidebar/: index.tsx
src/components/Viewer/: index.tsx
src/hooks/: useFileUrl.ts  useKeyboard.test.ts  useKeyboard.ts
src/lib/: depthCache.ts  parallaxGL.ts  tauri.ts
src/store/: index.test.ts  index.ts
src/test/: setup.ts
src/workers/: depth.worker.ts
